fixx css problems and introduce dark mode

--- a/src/theme/dark/_smui-theme.scss
+++ b/src/theme/dark/_smui-theme.scss
@@ -2,13 +2,14 @@
 
 @use '@material/theme/color-palette';
 
+// Svelte Colors! (Dark Theme)
 @use '@material/theme/index' as theme with
   (
-    $primary: #e73a00,
-    $secondary: #676778,
-    $surface: #fff,
-    $background: #fff,
-    $error: color-palette.$red-900
+    $primary: #ff3e00,
+    $secondary: color.scale(#676778, $whiteness: -10%),
+    $surface: color.adjust(color-palette.$grey-900, $blue: +4),
+    $background: #000,
+    $error: color-palette.$red-700
   );
 
 @use '@material/typography/index' as typography;
@@ -16,7 +17,7 @@
 html,
 body {
   @include typography.typography('body1');
-  background-color: theme.$surface;
+  background-color: #000;
   color: theme.$on-surface;
   margin: 0;
   padding: 0;
